--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@
   /* Search */
 
   .form-control::placeholder {
-    color: #ffffff80; /* Set placeholder text color */
+    /* color: #ffffff80; Set placeholder text color */
   }
   .form-search {
     background: none; /* Màu nền trong suốt */
@@ -218,14 +218,14 @@ body {
   height: 400px;
   object-fit: cover;
 }
-/* Search */
+
 .form-control {
-  background: none; /* Màu nền trong suốt */
+  /* background: none;
   border: none;
-  color: white;
+  color: white; */
 }
 .form-control::placeholder {
-  color: #ffffff80; /* Set placeholder text color */
+  /* color: #ffffff80;  */
 }
 .form-search {
   border-bottom: 1px solid gray;
@@ -234,6 +234,9 @@ body {
 .form-search:focus {
   background-color: #fffff100;
   color: #fff;
+}
+.form-search::placeholder {
+  color: #ffffff80; 
 }
 .card-main{
   transform: translateY(0);
