--- a/css/styles.css
+++ b/css/styles.css
@@ -14,147 +14,144 @@
 }
 
 @media only screen and (max-width: 1200px) {
-    .card-infor {
-        display: none!important;
-    }
-    .show-logo {
-        display:
-         block!important;
-    }
-    .volume {
-      display: none!important;;
-    }
-}
-
-@media only screen and (max-width: 1000px) { 
-  .image-song {
-    border-radius: 20px;
-    object-fit: cover;
-    width: 30px!important;
-  }
-  .name-song {
-    font-size: medium!important;
-    
-  }
-  .author-song {
-    font-size: small!important;
-  }
-}
-@media only screen and (max-width: 768px) { 
-  .image-song {
-    border-radius: 20px;
-    object-fit: cover;
-    width: 30px!important;
-  }
-  .name-song {
-    font-size: medium!important;
-    
-  }
-  .author-song {
-    font-size: small!important;
-  }
-}
-
-@media only screen and (max-width: 576px) { 
-  .author-infor {
-    justify-content: center!important;
-    text-align: center;
-    width: 100%;
   .card-infor {
     display: none !important;
   }
   .show-logo {
     display: block !important;
   }
+  .volume {
+    display: none !important;
+  }
 }
+
+@media only screen and (max-width: 1000px) {
+  .image-song {
+    border-radius: 20px;
+    object-fit: cover;
+    width: 30px !important;
+  }
+  .name-song {
+    font-size: medium !important;
+  }
+  .author-song {
+    font-size: small !important;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .image-song {
+    border-radius: 20px;
+    object-fit: cover;
+    width: 30px !important;
+  }
+  .name-song {
+    font-size: medium !important;
+  }
+  .author-song {
+    font-size: small !important;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .author-infor {
+    justify-content: center !important;
+    text-align: center;
+    width: 100%;
+    .card-infor {
+      display: none !important;
+    }
+    .show-logo {
+      display: block !important;
+    }
+  }
 }
 
 /* Home=========================================== */
 /* nav and menu */
 .background-main {
-    background-color: #2d2d2d;
-  }
-  .menu-nav {
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
-  }
-  .menu-nav li {
-    list-style: none;
-    display: flex;
-    width: 40px;
-    height: 40px;
-    font-size: 20px;
-  }
-  .menu-nav li a {
-    text-decoration: none;
-    color: #fff;
-    display: flex;
-    gap: 1rem;
-  }
-  .menu-nav li a:hover {
-    color: #17a700;
-  }
-  /* Carousel */
-  .carousel-item img {
-    height: 400px;
-    object-fit: cover;
-  }
-  /* Search */
+  background-color: #2d2d2d;
+}
+.menu-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.menu-nav li {
+  list-style: none;
+  display: flex;
+  width: 40px;
+  height: 40px;
+  font-size: 20px;
+}
+.menu-nav li a {
+  text-decoration: none;
+  color: #fff;
+  display: flex;
+  gap: 1rem;
+}
+.menu-nav li a:hover {
+  color: #17a700;
+}
+/* Carousel */
+.carousel-item img {
+  height: 400px;
+  object-fit: cover;
+}
+/* Search */
 
-  .form-control::placeholder {
-    color: #ffffff80; /* Set placeholder text color */
-  }
-  .form-search {
-    background: none; /* Màu nền trong suốt */
-    border: none;
-    color: white;
-    border-bottom: 1px solid gray!important;
-    border-radius: 0!important;
-  }
-  .form-search:focus {
-    background-color: #fffff100;
-    color: #fff;
-  }
-  .card img {
-    object-fit: cover !important;
-  }
-  .top-song {
-    border-radius: 10px;
-    background: #161616;
-    width: 456px;
-    height: 509px;
-    flex-shrink: 0;
-    overflow-y: auto;
-  }
-  .list-top-songs li {
-    list-style: none;
-  }
-  .list-top-songs li div {
-    margin-top: 45px;
-    text-decoration: none;
-    color: #fff !important;
-    font-size: 22px;
-    display: flex;
-    gap: 1rem;
-  }
-  .list-top-songs li div img {
-    border-radius: 2px;
-    object-fit: cover;
-  }
-  
-  .song-item {
-    cursor: pointer;
-  }
-  
-  .play-music {
-    background-color: #2b2828;
-    height: 100px;
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    box-shadow: #2b2828;
-  }
+.form-control::placeholder {
+  color: #ffffff80; /* Set placeholder text color */
+}
+.form-search {
+  background: none; /* Màu nền trong suốt */
+  border: none;
+  color: white;
+  border-bottom: 1px solid gray !important;
+  border-radius: 0 !important;
+}
+.form-search:focus {
+  background-color: #fffff100;
+  color: #fff;
+}
+.card img {
+  object-fit: cover !important;
+}
+.top-song {
+  border-radius: 10px;
+  background: #161616;
+  width: 456px;
+  height: 509px;
+  flex-shrink: 0;
+  overflow-y: auto;
+}
+.list-top-songs li {
+  list-style: none;
+}
+.list-top-songs li div {
+  margin-top: 45px;
+  text-decoration: none;
+  color: #fff !important;
+  font-size: 22px;
+  display: flex;
+  gap: 1rem;
+}
+.list-top-songs li div img {
+  border-radius: 2px;
+  object-fit: cover;
+}
+
+.song-item {
+  cursor: pointer;
+}
+
+.play-music {
+  background-color: #2b2828;
+  height: 100px;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  box-shadow: #2b2828;
+}
 .image-song {
   border-radius: 2px;
   object-fit: cover;
@@ -163,23 +160,22 @@
 
 .seek_slider::-webkit-slider-thumb,
 .volume_slider::-webkit-slider-thumb {
-  
-    appearance: none;
-    width: 15px;
-    height: 15px;
-    background: #fff;
-    cursor: grab;
-    border: 2px solid #17a700;
-    border-radius: 100%;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  background: #fff;
+  cursor: grab;
+  border: 2px solid #17a700;
+  border-radius: 100%;
 }
 
-.seek_slider, .volume_slider {
-
+.seek_slider,
+.volume_slider {
   appearance: none;
   height: 5px;
-  background:  #17a700;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+  background: #17a700;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
 }
 
 .seek_slider {
@@ -213,14 +209,13 @@ body {
 .menu-nav li a:hover {
   color: #17a700;
 }
-.nav-moblie{
+.nav-moblie {
   display: none;
 }
 /* Carousel */
 .carousel-item img {
   height: 400px;
   object-fit: cover;
-  
 }
 /* Search */
 .form-control {
@@ -294,9 +289,7 @@ body {
 .menu-icon-md {
   display: none;
 }
-.menu-logo-md {
-  display: none;
-}
+
 .table-playlist tr th {
   background-color: #2d2d2d;
   color: #fff;
@@ -309,7 +302,7 @@ body {
 }
 /* CSS cho popup */
 .popup {
-  z-index: 99;
+  z-index: 999;
   display: none;
   position: fixed;
   top: 0;
@@ -330,14 +323,96 @@ body {
   padding: 30px;
   text-align: center;
 }
+/* nav mobile */
+.nav__mobile-list {
+  display: none;
+}
+.overlay-display {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: none;
+  animation: fadeIn linear 0.2s;
+}
+.nav__mobile-close {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  display: none;
+}
+.nav__mobile {
+  background-color: #2b2828;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 250px;
+  max-width: 100%;
+  transform: translateX(-100%);
+  opacity: 0;
+}
+#nav__check {
+  display: none;
+}
+#nav__check:checked ~ .overlay-display {
+  display: block;
+}
+#nav__check:checked ~ .nav__mobile {
+  transform: translateX(0);
+  transition: all linear 0.5s;
+  opacity: 1;
+}
 
 /* Reponsive */
 @media only screen and (max-width: 1024px) {
-  
+
+  .nav__list {
+    display: none;
+  }
+  .nav__bar-btn {
+    display: block;
+    margin: 20px;
+  }
+  .nav__mobile {
+    display: block;
+  }
+  .nav__mobile-list {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    gap: 2rem;
+    margin-top: 40px;
+  }
+  .nav__mobile-list .nav__mobile-link {
+    text-decoration: none;
+    color: #fff;
+  }
+  .nav__mobile-list .nav__mobile-link:hover {
+    color: #2ea043;
+  }
+  .nav__mobile-close {
+    display: block;
+    /* padding: 3px 5px;
+    background-color: red; */
+    border-radius: 5px;
+  }
+
+  .nav__mobile-close label {
+    border-radius: 3px;
+    background-color: rgba(230, 46, 46, 0.879);
+    border: none;
+    color: #fff;
+    font-size: 1rem;
+    cursor: pointer;
+    padding: 5px 15px;
+  }
   div {
     background-color: red;
   }
-  .width-carousel-md{
+  .width-carousel-md {
     min-width: 95vw;
   }
   .silde-bar {
@@ -352,40 +427,47 @@ body {
   .menu-icon-md {
     display: block;
     cursor: pointer;
+    position: relative;
   }
-  .menu-logo-md {
-    display: block;
+  .menu-md {
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 250px;
+    max-width: 100%;
+    transform: translateX(-100%);
+    opacity: 0;
   }
 
-  .nav-moblie{
-    display: flex;
+  .nav-moblie {
+    display: block;
   }
 }
 /* CSS TABLE  */
 
 /* Album deatail */
-.card-img-info{
+.card-img-info {
   position: relative;
   overflow: hidden;
-  background-color: #2D2D2D;
+  background-color: #2d2d2d;
 }
 
-.play-music-album{
+.play-music-album {
   display: block;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   color: #fff;
 }
-.card-img-info::after{
- 
+.card-img-info::after {
 }
-.list-song{
-  border-left:1px solid gray ;
+.list-song {
+  border-left: 1px solid gray;
   height: 600px;
   overflow: auto;
-
 }
 
 @media only screen and (max-width: 768px) {
@@ -407,10 +489,25 @@ body {
   .remove-element {
     display: none !important;
   }
+  .carousel{
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 480px) {
   div {
     background-color: pink;
+  }
+  .carousel{
+    display: none;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
