--- a/css/styles.css
+++ b/css/styles.css
@@ -272,6 +272,8 @@ body {
 
 .top-song::-webkit-scrollbar-track {
   background-color: #161616;
+  
+
   border-radius: 100px;
 }
 
@@ -279,6 +281,40 @@ body {
   background-color: #222020;
   border-radius: 100px;
 }
+html::-webkit-scrollbar {
+  width:10px;
+}
+
+html::-webkit-scrollbar-track {
+  background-color: #222020;
+  border-radius: 100px;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: #161616;
+  border-radius: 100px;
+}
+
+.playlist::-webkit-scrollbar {
+  width: 10px;
+}
+
+.playlist::-webkit-scrollbar-track {
+  background-color: #222020;
+
+  border-radius: 100px;
+}
+
+.playlist::-webkit-scrollbar-thumb {
+  background-color: #161616;
+  border-radius: 100px;
+}
+
+.playlist {
+  height: 700px ;
+
+}
+
 .list-top-songs li {
   list-style: none;
 }
@@ -624,3 +660,4 @@ body {
     align-items: flex-start !important;
   }
 }
+
